--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>A Tribute Page To Michael Jackson</title>
 </head>
 <body>
-    <header>
+    <header class="navbar">
         <nav class="navbar">
             <ul><!-- unordered list for the navbar items-->
                 <li><a class="active" href="#home">Home</a></li>
@@ -19,6 +19,7 @@
     </header>
     <main>
         <section class="container"><!-- a container for all the pages contents-->
+                <section class="flex">
             <section class="box-image">
             </section>
             <section class="right"><!-- container for the tribute-->
@@ -30,9 +31,10 @@
                         Jackson influenced my life as a child growing up. Michael said, and I quote, 'You never know how long you have with someone,
                         so don't forget to say I love you while you can.'
                     </p>
-                    <button type="submit" value="submit" class="btn">Share</button>
                 </section>
+                <button type="submit" value="submit" class="btn">Share</button>
             </section>
+        </section>
         </section>
     </main>
     <footer><!-- footer information-->
